# hacs_ticktick

./: .openapi-generator-ignore  README.md  config.json  generate_client.sh  hacs.json  pyproject.toml  settings.gradle  setup.py  test-requirements.txt  tox.ini
.github/workflows/: python.yml  release_on_tag.yml
.openapi-generator/: FILES
custom_components/ticktick_todo/: __init__.py  application_credentials.py  config_flow.py  coordinator.py  helper.py  manifest.json  todo.py
custom_components/ticktick_todo/pyticktick/: .gitlab-ci.yml  .travis.yml  README.md  __init__.py  build.gradle  openapi.yaml  project.yaml  pyproject.toml  schemas.yaml  setup.py  task.yaml
custom_components/ticktick_todo/pyticktick/.openapi-generator/: FILES
custom_components/ticktick_todo/pyticktick/docs/: ChecklistItem.md  Column.md  DefaultApi.md  OauthTokenPost200Response.md  OauthTokenPostRequest.md  OpenV1ProjectProjectIdPostRequest.md  OpenV1ProjectProjectIdTaskTaskIdCompletePostRequest.md  OpenV1TaskTaskIdPostRequest.md  Project.md  ProjectDataResponse.md  ProjectResponse.md  Task.md  TaskResponse.md  TaskResponseAllOfCompletedTime.md  TaskResponseAllOfStatus.md
custom_components/ticktick_todo/pyticktick/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
custom_components/ticktick_todo/pyticktick/test/: test_checklist_item.py  test_default_api.py  test_oauth_token_post200_response.py  test_oauth_token_post_request.py  test_open_v1_project_project_id_post_request.py  test_open_v1_project_project_id_task_task_id_complete_post_request.py  test_open_v1_task_task_id_post_request.py  test_project.py  test_project_response.py  test_status.py  test_task.py  test_task_response.py  test_task_response_all_of_completed_time.py  test_task_response_all_of_status.py
custom_components/ticktick_todo/translations/: cs.json  en.json
docs/: ChecklistItem.md  Column.md  DefaultApi.md  OauthTokenPost200Response.md  OauthTokenPostRequest.md  OpenV1ProjectProjectIdPostRequest.md  OpenV1ProjectProjectIdTaskTaskIdCompletePostRequest.md  OpenV1TaskTaskIdPostRequest.md  Project.md  ProjectData.md  ProjectDataResponse.md  ProjectResponse.md  Status.md  Task.md  TaskResponse.md  TaskResponseAllOfCompletedTime.md  TaskResponseAllOfStatus.md
hatch_plugins/: README.md  manifest_generator.py
test/: test_checklist_item.py  test_column.py  test_default_api.py  test_oauth_token_post200_response.py  test_oauth_token_post_request.py  test_open_v1_project_project_id_post_request.py  test_open_v1_project_project_id_task_task_id_complete_post_request.py  test_open_v1_task_task_id_post_request.py  test_project.py  test_project_data.py  test_project_data_response.py  test_project_response.py  test_status.py  test_task.py
tests/: conftest.py  test_coordinator.py  test_init.py  test_todo.py
(+20 files in other folders)
