[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hacs_ticktick"
version = "0.2.1"
description = "TickTick TODO list"
readme = "README.md"
license = {text = "NoLicense"}
authors = [
    {name = "OpenAPI Generator Community", email = "team@openapitools.org"}
]
keywords = ["OpenAPI", "OpenAPI-Generator", "TickTick OpenAPI"]
requires-python = ">=3.8"
dependencies = [
    "urllib3 >= 1.25.3, < 3.0.0",
    "python-dateutil >= 2.8.2",
    "aiohttp >= 3.8.4",
    "pydantic >= 1.10.5, < 2",
    "aenum >= 3.1.11",
]

[project.urls]
Repository = "https://github.com/konikvranik/hacs_ticktick"

[project.optional-dependencies]
dev = [
    "pytest >= 7.2.1",
    "pytest-cov >= 2.8.1",
    "pytest-randomly >= 3.12.0",
    "homeassistant",
    "tox >= 3.9.0",
    "ruff >= 0.1.0",
    "tomli >= 2.0.0; python_version < '3.11'",
]

[tool.hatch.build.targets.wheel]
packages = ["custom_components.ticktick_todo.pyticktick.openapi_client"]
include = [
    "custom_components/ticktick_todo/manifest.json",
    "hacs.json"
]

[tool.hatch.build.hooks.custom]
path = "hatch_plugins/manifest_generator.py"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[tool.ruff]
line-length = 120
target-version = "py38"
lint.select = ["E", "F", "W", "I", "B", "C4", "ARG", "SIM"]
lint.ignore = []

[tool.ruff.lint.isort]
known-first-party = ["custom_components"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
